--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -19,6 +19,9 @@
 
 body {
   background-color: cadetblue;
+  // height: 100vh;
+  // width: 100vw;
+  overflow: hidden;
 }
 
 .container {
